--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/controller"]
 	path = lib/controller
 	url = https://github.com/sentimentxyz/controller
+[submodule "lib/oracle"]
+	path = lib/oracle
+	url = https://github.com/sentimentxyz/oracle
