--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+          token: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Install Foundry
-        uses: onbjerg/foundry-toolchain@v1.0.1
+        uses: onbjerg/foundry-toolchain@v1.0.6
         with:
           version: nightly
 
