test: add weth integrations tests

--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -22,5 +22,8 @@ jobs:
           version: nightly
 
       - name: Run tests
-        run: forge test
+        run: forge test --no-match-contract Integration
+      
+      - name: Run Integration tests
+        run: forge test --match-contract Integration --fork-url https://arb1.arbitrum.io/rpc
         
