Replace OZ with Solmate (#125)
* install solmate

* use ERC20 from solmate for LToken

* create TestERC20 using solmate

* remove oz dependencies

* misc fixes

* rename WethController test file

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,12 +4,12 @@
 [submodule "lib/prb-math"]
 	path = lib/prb-math
 	url = https://github.com/paulrberg/prb-math
-[submodule "lib/openzeppelin-contracts"]
-	path = lib/openzeppelin-contracts
-	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 [submodule "lib/oracle"]
 	path = lib/oracle
 	url = https://github.com/sentimentxyz/oracle
 [submodule "lib/controller"]
 	path = lib/controller
 	url = https://github.com/sentimentxyz/controller
+[submodule "lib/solmate"]
+	path = lib/solmate
+	url = https://github.com/rari-capital/solmate
