fix: increase verbosity of tests

--- a/.github/workflows/ci-jobs.yml
+++ b/.github/workflows/ci-jobs.yml
@@ -22,8 +22,8 @@ jobs:
           version: nightly
 
       - name: Run tests
-        run: forge test --no-match-contract Integration
+        run: forge test --no-match-contract Integration -vvv
       
       - name: Run Integration tests
-        run: forge test --match-contract Integration --fork-url https://rpc.ankr.com/eth
+        run: forge test --match-contract Integration --fork-url https://rpc.ankr.com/eth -vvv
         
